fixed the banner,button and alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,32 +5,27 @@ box-sizing: border-box;
 }
 
 /* shared css */
-.btn{
-    border-style: none;
+ .btn{
+border-style: none;
 padding: 12px 16px;
 font-size: 16px;
 font-weight: 500;
 border-radius: 4px;
 color: #FFFFFF;
-display: flex;
-text-align: center;
-  align-items: center;
 background-color: #469165;
 cursor: pointer;
-gap: 5px;
-}
+/* margin-right: 10px; */
+margin-bottom: 16px ;
+
+} 
 
 .btn:hover{
     color: aquamarine;
     background-color: rgb(118, 46, 118);
 }
-.button{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 24px;
-  
-}
+ .btn img{
+  margin-left: 10px;
+ }
 
 /* navigation-section */
 .inter{
@@ -55,73 +50,108 @@ align-items: center;
 }
 
 /* header-section */
-header{
-   /* width: 100%; */
-    /* height: 674px; */
-
-    background-image: url(../assets/hero-bg.png);
-    background-repeat: no-repeat;
-    
+ 
+/* header-section */
+.banner-section{
+  background-image: url(../assets/hero-bg.png);
 }
 
- header .banner-section{
-    width: 85%;
-    max-width: 1360px;
-  margin: 0 auto;
-  padding: 120px 0;
-    text-align: center;
-     align-items: center;
+.all-content{
+  padding: 115px 120px 180px 120px;
+  text-align: center;
+  align-items: center;
+}
+
+.all-content .top-head p{
+   width: 229px;
+padding: 8px 12px;
+  border-radius: 1000px;
+  color: #469165;
+  background-color: #f4efef;
+  margin-bottom: 16px;
+ 
+}
+img p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center ;
+}
+.all-content .top-head{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.all-content .content h1{
+   font-size: 48px;
+   color: #FFFFFF;
+   margin-bottom: 16px;
+}
+.all-content .content h1 span{
+  color: #30B868;
+}
+.all-content .content p{
+  font-size: 18px;
+  line-height: 24px;
+  color: #FFFFFF;
+  margin-bottom: 32px;
+}
+
+
+.btn1{
+
+padding: 11px 16px;
+font-size: 16px;
+font-weight: 500;
+border-radius: 4px;
+color: #FFFFFF;
+background-color: transparent;
+cursor: pointer;
+border-top: 1px solid white;
+border-left: 1px solid white;
+border-right: 1px solid white;
+border-bottom: 1px solid white;
+margin-left: 10px;
+
+}
+
+.btn1:hover{
+    color: aquamarine;
+    background-color: rgb(118, 46, 118);
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ text-align: center;
+}
+.button .btn {
+  display: flex;
+  margin-top: 14px;
   
 }
-
-.top-head{
-   
-    padding: 8px 12px;
-    background-color: #FFFFFF;
-    color: #276941;
-    margin-bottom: 16px;
-    text-align: center;
-}
-
-.top-head img{
- 
-  align-items: center;
-  text-align: center;
-}
-
- header .banner-section h1{
-    color: #FFFFFF;
-    margin-bottom: 16px;
- }
-
- header .banner-section h1 span{
-    color: #30B868;
-    opacity: 90%;
-    margin-bottom: 16px;
- }
-
-
-  header .banner-section .content p{
-   
-    font-size: 18px;
-     color: #FFFFFF;
-     line-height: 24px;
-     margin-bottom: 32px;
-    
-  }
-  .btn1{
-    padding: 12px 16px;
-   
-	
-  }
-  .button .btn img{
+.button .btn1 {
   display: flex;
-justify-content: center;
-align-items: center;
-  }
+  justify-content: center;
+  align-items: start;
+  
+}
+.button .btn1 img{
+  margin-right: 10px;
+}
+
+
+
+
+
+
 
   /* notes section */
-
+ .note{
+  background-color: #fafafa;
+}
 .notes-section, .card-section, .second-brain{
   width: 85%;
   max-width: 1360px;
@@ -131,7 +161,8 @@ align-items: center;
 
 .heading{
   text-align: center;
-  margin-top: 40px;
+  margin-top: 0px;
+  padding-top: 40px;
 }
 .heading h1{
   
@@ -161,7 +192,8 @@ align-items: center;
 .cards{
   padding: 24px;
   /* margin-bottom: 16px; */
-  box-shadow: 0 0 8px 0 #00000010;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 8px 0 #00000006;
   
 }
 .image-color{
@@ -214,7 +246,7 @@ padding: 120px 0;
 }
 .second-brain .brain-content .solution{
   color: #469165;
-  line-height: 20px;
+  margin-bottom: 16px;
 }
 
 .second-brain .brain-content h2{
@@ -263,5 +295,75 @@ padding: 120px 0;
 .challenge .challenge-section p{
   line-height: 24px;
   color: #627382;
-  margin-bottom: 25px;
+  margin-bottom: 5px;
 }
+
+/* footer section */
+.footer{
+  background-color: #001931;
+  
+}
+
+.footer .foot{
+   width: 85%;
+  max-width: 1360px;
+  margin: 0 auto ;
+  padding-top: 120px;
+  padding-bottom: 80px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-between;
+
+}
+.social{
+  text-align: left;
+  padding-right: 50px;
+ margin-right: 20px;
+ 
+}
+
+.social p{
+  line-height: 28px;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.social .icons{
+  display: flex;
+  justify-content: space-between;
+ 
+}
+
+.color-icons{
+       
+   width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.icons .color-icons{
+  margin-right: 16px;
+}
+hr{
+  width: 85%;
+  max-width: 1360px;
+  margin: 0px auto;
+  color: #FAFAFA;
+  
+}
+.footer .caption1 {
+    width: 85%;
+  max-width: 1360px;
+  margin: 0px auto;
+ padding-bottom: 30px;
+
+}
+.footer .caption1 p{
+  text-align: center;
+  padding-top: 30px;
+  color: #FFFFFF;
+}
+
